removing the left margin. Fixes problem with popup box pointer not aligning right

--- a/web-app/css/AODN.css
+++ b/web-app/css/AODN.css
@@ -7,7 +7,6 @@
 	background: -webkit-gradient(linear, left top, left bottom, from(whitesmoke), to(#FFFFFF));
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='whitesmoke', endColorstr='#FFFFFF');
 	color: #030303;
-    margin: 5px! important;	
     margin-top: 0px! important; 
 	
 }
